--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-color: rgb(70, 70, 80);
+	background-color: rgb(255, 255, 255);
 	font-family: "Consolas";
 }
 
@@ -35,19 +35,19 @@ form {
 }
 
 .questionStyle p {
-	background-color: rgb(44, 44, 44);
+	background-color: rgb(120, 119, 119);
 	text-align: left;
 	padding: 13px;
 }
 
 .questionStyle label {
-	background-color: rgb(55, 55, 55);
+	background-color: rgb(95, 91, 91);
 	padding: 13px;
 	transition-duration: 0.4s;
 }
 
 h1 {
-	color: white;
+	color: rgb(63, 60, 60);
 	font-size: 80px;
 	margin-bottom: 30px;
 }
@@ -56,7 +56,7 @@ header {
 	text-align: center;
 	height: 80px;
 	position: relative;
-	background-color: rgb(44, 44, 44);
+	background-color: rgb(95, 147, 49);
 }
 
 h2 {
