--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 	margin: 0;
 	padding: 0;
 }
+html{
+	height: 100%;
+}
 
 body {
 	height: 100%;
@@ -55,7 +58,7 @@ h1 {
 
 header {
 	text-align: center;
-	height: 80px;
+	height: 8%;
 	position: relative;
 	background-color: rgb(95, 147, 49);
 }
@@ -131,7 +134,6 @@ footer {
 	position: absolute;
 	height: 5vh;
 	width: 100%;
-	margin-top: 3vh;
 }
 
 .footerLeft {
@@ -165,9 +167,7 @@ form .questionStyle .correctAnswer {
 }
 
 .mainsection{
-	margin-top: 5%;
-    width: 100%; 
-	height: 100%;
+	height: 87%;
     display: flex; /* wyśrodkowanie elementów w formularzu */
     flex-direction: column; 
     justify-content: center; /* wyśrodkowanie zawartości */
@@ -178,7 +178,6 @@ form .questionStyle .correctAnswer {
 /* sekcja logowania */
 .logowanie {
     background-color: #ffffff;
-    padding: 30px;
     border-radius: 8px;
     border: 1px solid rgb(109, 107, 107);
     width: 100%; 
