--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ footer {
 	background-color: rgb(44, 44, 44);
 	color: #fff;
 	display: flex;
-	position: absolute;
+	position: relative;
 	height: 5vh;
 	width: 100%;
 }
