--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,9 @@ a:hover {
 }
 
 .submitButton {
+
 	padding: 10px;
-	margin: 10px;
+	margin-bottom: 5px;
 	font-size: 18px;
 	border: 1px solid black;
 	transition-duration: 1s;
@@ -214,9 +215,14 @@ form .questionStyle .correctAnswer {
     font-size: 16px;
 }
 
-
+#powrotbutton{
+	display: block;
+	width: 50%;
+	margin: 5px auto;
+}
 
 #ok{
+	
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -224,7 +230,6 @@ form .questionStyle .correctAnswer {
     font-size: 18px;
     border-radius: 4px;
     cursor: pointer;
-    width: 100%;
     transition: background-color 2.5s ease;
 }
 
