--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ header {
 h2 {
 	position: absolute;
 	color: white;
-	font-size: 36px;
+	font-size: 25px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -120,6 +120,13 @@ button:hover,
 	color: rgb(197, 125, 125);
 }
 
+@media (min-width: 594px) {
+	h2 {
+		font-size: 36px;
+	}
+}
+
+
 @media (min-width: 1750px) {
 	.mainContainer,
 	form {
@@ -142,7 +149,7 @@ footer {
 }
 
 .footerRight {
-	position: absolute;
+	position: relative;
 	right: 0;
 	margin: 10px;
 }
